--- a/guide/android.mdx
+++ b/guide/android.mdx
@@ -1,5 +1,43 @@
 ---
-title: 'Android'
-description: 'Apple Music Download On Android'
-icon: 'android'
+title: "Android"
+description: "Apple Music Download On Android"
+icon: "android"
 ---
+
+# Preface
+
+
+
+# Installation
+
+<Steps>
+  <Step title="Step 1">
+    Download and install the following two APKs: the first one is used as the decryption client, and the second one is used as the download client.
+
+    [https://github.com/itouakirai/apple-music-jshook-script/releases/download/wsa/Apple.Music\_4.9.3\_arm64v8a\_gadget.apk](https://github.com/itouakirai/apple-music-jshook-script/releases/download/wsa/Apple.Music_4.9.3_gadget.apk)
+
+    https://github.com/hanxinhao000/ZeroTermux/releases/download/release/ZeroTermux-0.118.1.41.apk
+  </Step>
+
+  <Step title="Step 2">
+    After installing the first application, open it and log in to your Apple Music account. We will proceed to configure the second application.
+
+    Open the second application, ZeroTermux, and grant the required permissions as prompted. Next, enter the following commands to configure the environment and pull the download repository (press Enter to accept the default for any Y/N prompts that appear during the process).
+  </Step>
+</Steps>
+
+# Usage
+
+<Steps>
+  <Step title="Step 1">
+    Launch the Apple Music application and ensure it can run continuously in the background (e.g., disable battery optimization, grant background running permissions, etc.).
+  </Step>
+
+  <Step title="Step 2">
+    Start ZeroTermux and enter the following command to access the download project's commands.
+  </Step>
+
+  <Step title="Step 3">
+    You can then use the download commands to start downloading.
+  </Step>
+</Steps>
