--- a/guide/android.mdx
+++ b/guide/android.mdx
@@ -6,6 +6,8 @@ icon: "android"
 
 # Preface
 
+
+
 # Installation
 
 <Steps>
@@ -21,6 +23,10 @@ icon: "android"
     After installing the first application, open it and log in to your Apple Music account. We will proceed to configure the second application.
 
     Open the second application, ZeroTermux, and grant the required permissions as prompted. Next, enter the following commands to configure the environment and pull the download repository (press Enter to accept the default for any Y/N prompts that appear during the process).
+
+    ```
+    pkg update && pkg upgrade && pkg install git golang gpac ffmpeg && git clone https://github.com/zhaarey/apple-music-alac-atmos-downloader.git
+    ```
   </Step>
 </Steps>
 
