Documentation edits made through Mintlify web editor

--- a/guide/macos.mdx
+++ b/guide/macos.mdx
@@ -6,3 +6,6 @@ icon: 'apple'
 
 
 
+<Frame as="div">
+  `<iframe allow="autoplay *; encrypted-media *;" frameborder="0" height="150" style="width:100%;max-width:660px;overflow:hidden;background:transparent;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.music.apple.com/us/album/pancho-and-lefty/1182567204?i=1182567495"></iframe>`
+</Frame>
