Documentation edits made through Mintlify web editor

--- a/guide/android.mdx
+++ b/guide/android.mdx
@@ -18,7 +18,7 @@ icon: "android"
   </Step>
 
   <Step title="Step 2">
-    After installing the first application, open it and log in to your Apple Music account. We will proceed to configure the second application.
+    After installing the first application, open it and log in to your Apple Music account(`Subscription required`). We will proceed to configure the second application.
 
     Open the second application, ZeroTermux, and grant the required permissions as prompted. Next, enter the following commands to configure the environment and pull the download repository (press Enter to accept the default for any Y/N prompts that appear during the process).
 
