Documentation edits made through Mintlify web editor

--- a/guide/android.mdx
+++ b/guide/android.mdx
@@ -11,6 +11,9 @@ icon: "android"
 <Steps>
   <Step title="Step 1">
     Download and install the following two APKs: the first one is used as the decryption client, and the second one is used as the download client.
+    <Card title="decryption client" icon="key" href="/content/components/card-group">
+      https://github.com/itouakirai/apple-music-jshook-script/releases/download/wsa/Apple.Music_4.9.3_arm64v8a_gadget.apk
+    </Card>
   </Step>
 
   <Step title="Step 2">
