--- a/guide/android.mdx
+++ b/guide/android.mdx
@@ -12,10 +12,11 @@ icon: "android"
   <Step title="Step 1">
     Download and install the following two APKs: the first one is used as the decryption client, and the second one is used as the download client.
 
-    <Card title="decryption client" icon="key" href="/content/components/card-group">
+    <Card title="decryption client" icon="key" href="https://github.com/itouakirai/apple-music-jshook-script/releases/download/wsa/Apple.Music_4.9.3_arm64v8a_gadget.apk">
       [https://github.com/itouakirai/apple-music-jshook-script/releases/download/wsa/Apple.Music\_4.9.3\_arm64v8a\_gadget.apk](https://github.com/itouakirai/apple-music-jshook-script/releases/download/wsa/Apple.Music_4.9.3_arm64v8a_gadget.apk)
     </Card>
-    <Card title="download client" icon="download" href="/content/components/card-group">
+
+    <Card title="download client" icon="download" href="https://github.com/hanxinhao000/ZeroTermux/releases/download/release/ZeroTermux-0.118.1.41.apk">
       [https://github.com/hanxinhao000/ZeroTermux/releases/download/release/ZeroTermux-0.118.1.41.apk](https://github.com/hanxinhao000/ZeroTermux/releases/download/release/ZeroTermux-0.118.1.41.apk)
     </Card>
   </Step>
