Documentation edits made through Mintlify web editor

--- a/guide/windows.mdx
+++ b/guide/windows.mdx
@@ -3,3 +3,5 @@ title: 'Windows'
 description: 'Apple Music Download On Windows'
 icon: 'windows'
 ---
+
+<iframe src="https://rentry.co/zhaareywrapper"> </iframe>
