--- a/guide/windows.mdx
+++ b/guide/windows.mdx
@@ -4,4 +4,4 @@ description: 'Apple Music Download On Windows'
 icon: 'windows'
 ---
 
-<iframe src="https://rentry.co/zhaareywrapper"> </iframe>
+<iframe width="560" height="315" src="https://rentry.co/zhaareywrapper" />
