--- a/guide/android-zh.mdx
+++ b/guide/android-zh.mdx
@@ -3,3 +3,5 @@ title: "安卓"
 description: "Apple Music Download On Android"
 icon: "android"
 ---
+
+<iframe width="315" height="800" src="https://telegra.ph/Apple-Music-Download-On-Android-06-30" />
