--- a/guide/macos.mdx
+++ b/guide/macos.mdx
@@ -12,7 +12,7 @@ icon: 'apple'
     Open the terminal.
 
     ```
-    brew install go gpac git docker && git clone https://github.com/zhaarey/apple-music-alac-atmos-downloader.git
+    brew install go gpac git docker && git clone https://github.com/zhaarey/apple-music-downloader.git
     ```
   </Step>
 
@@ -20,10 +20,6 @@ icon: 'apple'
     Use the Docker command to log in to the wrapper, replace username:password in the command with your Apple Music account(`Subscription required`). If you have enabled 2FA verification, wait to receive the verification code, then open a new terminal and follow the prompts to enter the command. If the response is type 6, the login is successful. At this point, close all terminal windows.
 
     <CodeGroup>
-    ```Bash M chip
-    docker run -v ./rootfs/data:/app/rootfs/data -e args="-L username:password -F" --rm ghcr.io/itouakirai/wrapper:arm
-    ```
-
     ```Bash Inter chip
     docker run -v ./rootfs/data:/app/rootfs/data -e args="-L username:password -F" --rm ghcr.io/itouakirai/wrapper:x86
     ```
@@ -38,10 +34,6 @@ icon: 'apple'
     Open the first terminal and execute the wrapper run command.
 
     <CodeGroup>
-    ```Bash M chip
-    docker run -v ./rootfs/data:/app/rootfs/data -p 10020:10020 -p 20020:20020 -e args="-M 20020 -H 0.0.0.0" --rm  ghcr.io/itouakirai/wrapper:arm
-    ```
-
     ```Bash Inter chip
     docker run -v ./rootfs/data:/app/rootfs/data -p 10020:10020 -p 20020:20020 -e args="-M 20020 -H 0.0.0.0" --rm  ghcr.io/itouakirai/wrapper:x86
     ```
@@ -49,10 +41,10 @@ icon: 'apple'
   </Step>
 
   <Step title="Step 2">
-    Open the second terminal, navigate to the directory where the download project is located, and get ready to start downloading.
+    Open the second terminal, get ready to start downloading.
 
     ```
-    cd apple-music-alac-atmos-downloader
+    cd apple-music-downloader
     ```
   </Step>
 
