--- a/guide/macos.mdx
+++ b/guide/macos.mdx
@@ -20,7 +20,7 @@ icon: 'apple'
     Use the Docker command to log in to the wrapper, replace username:password in the command with your Apple Music account(`Subscription required`). If you have enabled 2FA verification, wait to receive the verification code, then open a new terminal and follow the prompts to enter the command. If the response is type 6, the login is successful. At this point, close all terminal windows.
 
     <CodeGroup>
-    ```Bash Inter chip
+    ```Bash
     docker run -v ./rootfs/data:/app/rootfs/data -e args="-L username:password -F" --rm ghcr.io/itouakirai/wrapper:x86
     ```
     </CodeGroup>
@@ -34,7 +34,7 @@ icon: 'apple'
     Open the first terminal and execute the wrapper run command.
 
     <CodeGroup>
-    ```Bash Inter chip
+    ```Bash
     docker run -v ./rootfs/data:/app/rootfs/data -p 10020:10020 -p 20020:20020 -e args="-M 20020 -H 0.0.0.0" --rm  ghcr.io/itouakirai/wrapper:x86
     ```
     </CodeGroup>
