--- a/guide/android.mdx
+++ b/guide/android.mdx
@@ -16,8 +16,8 @@ icon: "android"
       [https://github.com/itouakirai/apple-music-jshook-script/releases/download/wsa/Apple.Music\_4.9.3\_arm64v8a\_gadget.apk](https://github.com/itouakirai/apple-music-jshook-script/releases/download/wsa/Apple.Music_4.9.3_arm64v8a_gadget.apk)
     </Card>
 
-    <Card title="download client" icon="download" href="https://github.com/hanxinhao000/ZeroTermux/releases/download/release/ZeroTermux-0.118.1.41.apk">
-      [https://github.com/hanxinhao000/ZeroTermux/releases/download/release/ZeroTermux-0.118.1.41.apk](https://github.com/hanxinhao000/ZeroTermux/releases/download/release/ZeroTermux-0.118.1.41.apk)
+    <Card title="download client" icon="download" href="https://github.com/hanxinhao000/ZeroTermux/releases">
+      [https://github.com/hanxinhao000/ZeroTermux/releases](https://github.com/hanxinhao000/ZeroTermux/releases)
     </Card>
   </Step>
 
